<resources>
    <string name="app_name">Noodle</string>
    <string name="button">Button</string>
    <string name="device_id">Device ID</string>
    <string name="delay_of_second">Delay of Second</string>
    <string name="add_device">Add Device</string>
    <string name="set_timer">Set Timer</string>
    <string name="timer">Timer :</string>
    <string name="lable_device_id">Device ID : </string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>